--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ['react', 'es2015', 'stage-0'],
-  "plugins": ['add-module-exports']
+  "presets": ["react", "es2015", "stage-0"],
+  "plugins": ["add-module-exports"],
+  "env": {
+    "production": {
+      "plugins": ["transform-react-remove-prop-types"]
+    }
+  }
 }
