--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jhanniferoliveira",
+  "name": "jhannifer",
   "description": "Portfolio da Jhannifer Oliveira built with Gatsby",
   "version": "1.0.0",
   "author": "fxcosta <fx3costa@gmail.com>",
@@ -31,11 +31,13 @@
     "react-responsive-grid": "^0.3.4",
     "react-scrollable-anchor": "^0.6.1",
     "react-tap-event-plugin": "^2.0.1",
-    "react-typography": "^0.16.5"
+    "react-typography": "^0.16.5",
+    "mixitup": "^3.2.2"
   },
   "devDependencies": {
     "animate.css": "^3.5.2",
     "babel-eslint": "^8.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "bootstrap": "^4.0.0-beta",
     "devicon": "https://github.com/konpa/devicon.git#v2.2",
     "eslint": "^4.7.0",
@@ -43,8 +45,8 @@
     "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^7.3.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^1.2.0",
     "lint-staged": "^4.2.1",
-    "mixitup": "^3.2.2",
     "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
     "prettier": "^1.7.0",
@@ -61,7 +63,7 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|scss)\"",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
