--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "gatsby-transformer-sharp": "^1.6.5",
     "jquery": "^3.3.1",
     "mixitup": "^3.2.2",
-    "npm": "^6.1.0",
     "react-lazyload": "^2.2.7",
     "react-responsive-grid": "^0.3.4",
+    "react-scroll-parallax": "^1.3.5",
     "react-scrollable-anchor": "^0.6.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-typography": "^0.16.5"
